--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RunSmart</title>
+    <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.min.css" />
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/script.js"></script>
   </head>
 
   <body>
-    <div class="promo">
+    <section class="promo">
       <div class="container">
         <header class="header">
           <a href="#" class="header__logo">
@@ -53,9 +65,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div class="advantages">
+    <section class="advantages">
       <div class="container">
         <div class="advantages__wrapper">
           <h1 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h1>
@@ -83,6 +95,53 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
+
+    <section class="consultation">
+      <div class="container">
+        <h2 class="title title_left">
+          Получите бесплатную консультацию <br />
+          по подбору пульсометра
+        </h2>
+        <div class="consultation__descr">
+          Просто заполните форму заявки <br />
+          и мы перезвоним вам в течении 10 минут
+        </div>
+        <form class="feed-form" action="#">
+          <input name="name" required placeholder="Ваше имя..." type="text" />
+          <input
+            name="phone"
+            required
+            placeholder="Ваш телефон..."
+            type="number"
+          />
+          <input
+            name="email"
+            required
+            placeholder="Ваш E-mail..."
+            type="email"
+          />
+
+          <button class="button button_submit">заказать консультацию</button>
+        </form>
+      </div>
+    </section>
+
+    <section class="carousel">
+      <div class="container">
+        <div class="carousel__inner">
+          <div>
+            <img src="icons/slide_1.png" alt="slide" />
+          </div>
+          <div>
+            <img src="icons/slide_2.png" alt="slide" />
+          </div>
+          <div>
+            <img src="icons/slide_3.png" alt="slide" />
+          </div>
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
