--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
             <div class="catalog-item__wrapper">
               <div class="catalog-item__content catalog-item__content_active">
                 <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img"></img>
-                <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                <div class="catalog-item__subtitle">Пульсометр Polar FT5</div>
                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                 <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
@@ -213,7 +213,7 @@
             <div class="catalog-item__wrapper">
               <div class="catalog-item__content catalog-item__content_active">
                 <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img"></img>
-                <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                <div class="catalog-item__subtitle">Пульсометр Polaroid 3D</div>
                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                 <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
@@ -240,7 +240,7 @@
             <div class="catalog-item__wrapper">
               <div class="catalog-item__content catalog-item__content_active">
                 <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img"></img>
-                <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                <div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
                 <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                 <a href="" class="catalog-item__link">ПОДРОБНЕЕ</a>
               </div>
@@ -416,8 +416,53 @@
       </div>
     </footer>
 
+
+
+
+    <div class="overlay">
+      <div class="modal" id="consultation">
+          <div class="modal__close">&times;</div>
+          <div class="modal__subtitle">Просто заполните форму заявки</div>
+          <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+          <form class="feed-form feed-form_mt25" action="#">
+              <input name="name" required placeholder="Ваше имя" type="text"> 
+              <input name="phone" required placeholder="Ваш телефон" type="number"> 
+              <input name="email" required placeholder="Ваш E-mail" type="email"> 
+
+              <button class="button button_submit">заказать консультацию</button>
+          </form>
+      </div>
+
+      <div class="modal" id="order">
+          <div class="modal__close">&times;</div>
+          <div class="modal__subtitle">Ваш заказ:</div>
+          <div class="modal__descr">Пульсометр Polar FT1</div>
+          <form class="feed-form feed-form_mt25" action="#">
+              <input name="name" required placeholder="Ваше имя" type="text"> 
+              <input name="phone" required placeholder="Ваш телефон" type="number"> 
+              <input name="email" required placeholder="Ваш E-mail" type="email"> 
+
+              <button class="button button_submit">купить</button>
+          </form>
+      </div>
+
+      <div class="modal modal_mini" id="thanks">
+          <div class="modal__close">&times;</div>
+          <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+          <div class="modal__descr">Наш менеджер свяжется с вами 
+              в ближайшее время!</div>
+      </div>
+  </div>
+
+
+
+
+
+
+
+<!-- 
   <div class="cover">
-    <div class="modal">
+    <div id="consultation" data-modal="first-form" class="modal">
       <div class="modal-dialog">
         <div class="modal-content">
           <button type="button" class="modal-btn-close btn-close"></button>
@@ -433,7 +478,7 @@
         </div>
       </div>
 
-      <div data-modal="form" class="modal">
+      <div id="order" data-modal="second-form" class="modal">
         <div class="modal-dialog">
           <div class="modal-content">
             <button type="button" class="modal-btn-close btn-close"></button>
@@ -449,7 +494,7 @@
           </div>
         </div>
 
-        <!-- <div class="modal-mini">
+        <div id="thanks" class="modal-mini">
           <div class="modal-dialog">
             <div class="modal-content">
               <button type="button" class="modal-btn-close btn-close"></button>
@@ -458,8 +503,8 @@
     
             </div>
           </div>
-      </div> -->
-    </div>
+      </div>
+    </div> -->
 
 
 
